# vfield

./: .gitignore  README.md  demo.ipynb  plot.ipynb  pyproject.toml  setup.cfg  test_particle.ipynb  vfield.py
data/: vectorfield.pt  vfield_epoch_0.pt  vfield_epoch_1.pt  vfield_epoch_10.pt  vfield_epoch_2.pt  vfield_epoch_3.pt  vfield_epoch_4.pt  vfield_epoch_5.pt  vfield_epoch_6.pt  vfield_epoch_7.pt  vfield_epoch_8.pt  vfield_epoch_9.pt
notebooks/: demo_comparison.ipynb  demo_ff_params.ipynb  demo_hires.ipynb  demo_params.ipynb  teaser.ipynb  test_anim.ipynb  test_reddit.ipynb
src/vfield/: __init__.py  vfield.py
